--- a/contact/privicy.css
+++ b/contact/privicy.css
@@ -18,8 +18,35 @@ a {
     text-decoration: none;
 }
 
-h1 h2 h3 {
-    color: #fff;
+h1 {
+    margin-top: 3rem;
+    font-size: 2rem;
+    text-align: center;
+}
+
+h2 {
+    margin-top: 2rem;
+    margin-left: 3rem;
+}
+
+
+h3 {
+    margin-top: 1.5rem;
+    margin-left: 5rem;
+}
+
+p {
+    margin-top: 1rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
+    /* padding: 0.5rem; */
+    font-size: 1rem;
+}
+
+li {
+    margin-top: 1rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
 }
 
 body {
